--- a/map.css
+++ b/map.css
@@ -19,5 +19,5 @@ h1{
 iframe{
     width: 80%;
     height: 500px;
-    filter: invert(100%);       /*change into dark mode*/
+    filter: invert(100%);      
 }
